# type-exercise-in-rust

./: Cargo.toml  README.md  README_ZH.md  rust-toolchain
.github/workflows/: ci.yml
archive/day1/: Cargo.toml
archive/day1/src/: array.rs  lib.rs
archive/day2/: Cargo.toml
archive/day2/src/: array.rs  lib.rs  scalar.rs
archive/day3/: Cargo.toml
archive/day3/src/: array.rs  lib.rs  scalar.rs
archive/day4/: Cargo.toml
archive/day4/src/: array.rs  lib.rs
archive/day5/: Cargo.toml
archive/day5/src/: array.rs  expr.rs  scalar.rs
archive/day6/: Cargo.toml
archive/day6-easy/: Cargo.toml
archive/day6-easy/src/: macros.rs  scalar.rs
archive/day6-failed/: Cargo.toml
archive/day6-failed/src/: array.rs  expr.rs  lib.rs
archive/day6-hard/: Cargo.toml
archive/day6-hard/src/: array.rs  expr.rs  lib.rs  macros.rs  scalar.rs
archive/day6/src/: expr.rs  scalar.rs
archive/day7-easy/: Cargo.toml
archive/day7-easy/src/: array.rs  expr.rs  macros.rs  scalar.rs
archive/day7-hard/: Cargo.toml
archive/day7-hard/src/: array.rs  expr.rs  lib.rs  scalar.rs
archive/day8/: Cargo.toml
archive/day8/src/: expr.rs  lib.rs  macros.rs  scalar.rs
expr-common/: Cargo.toml
expr-common/src/: array.rs  datatype.rs  expr.rs  lib.rs
expr-common/src/array/: dyn_array.rs  impls.rs  list_array.rs  physical_type.rs
expr-common/src/scalar/: list.rs
expr-impl/: Cargo.toml
expr-impl/src/: impl_.rs  lib.rs
expr-impl/src/impl_/: cmp.rs  tests.rs
expr-macro-rules/: Cargo.toml
expr-macro-rules/src/: datatype_macros.rs  lib.rs
expr-template/: Cargo.toml  build.rs
expr-template-impl/: Cargo.toml
expr-template-impl/src/: lib.rs
expr-template/src/: common.rs  lib.rs
src/: array.rs  datatype.rs  expr.rs  lib.rs  macros.rs  scalar.rs
src/array/: dyn_array.rs  impls.rs  iterator.rs  list_array.rs  physical_type.rs  primitive_array.rs  string_array.rs
src/column/: mod.rs
src/datatype/: macros.rs
src/expr/: cmp.rs  string.rs  vectorize.rs
src/scalar/: impls.rs  list.rs
tutorial/: book.toml
tutorial/src/: SUMMARY.md
tutorial/src/vectorized/: array.md  column_view.md  framework.md  func.md  (+3 more)
(+33 files in other folders)
