[package]
name = "type-exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bitvec = "1"
thiserror = "1"
rust_decimal = "1"

[workspace]
members = [
    "archive/day1",
    "archive/day2",
    "archive/day3",
    "archive/day4",
    "archive/day5",
    "archive/day6",
    # "archive/day6-failed",
]
