[package]
name = "expr-impl"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
expr-common = { path = "../expr-common" }
expr-template = { path = "../expr-template" }
expr-macro-rules = { path = "../expr-macro-rules" }
